--- a/Collaborative_Filtering.ipynb
+++ b/Collaborative_Filtering.ipynb
@@ -1866,6 +1866,34 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Refereces"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[1]Implementing a Collaborative Filtering Movie Recommender from .... (n.d.). Retrieved October 20, 2022, from\n",
+    "https://medium.com/analytics-vidhya/implementation-of-a-movies-recommender-from-implicit-feedback-6a\n",
+    "810de173ac.\n",
+    "\n",
+    "[2]Movie Recommendation System based on MovieLens | by Memphis .... (n.d.). Retrieved October 20,\n",
+    "2022, from\n",
+    "https://towardsdatascience.com/movie-recommendation-system-based-on-movielens-ef0df580cd0e.\n",
+    "\n",
+    "[3]Recommendation System for Movies — MovieLens | Grouplens | by .... (n.d.). Retrieved October 20,\n",
+    "2022, from https://medium.com/swlh/recommendation-system-for-movies-movielens-grouplens-171d30be334e.\n",
+    "\n",
+    "[4]adinas94/MovieLens-Recommendation-System ... - GitHub. (n.d.). Retrieved October 22, 2022, from https://github.com/adinas94/MovieLens-Recommendation-System.\n",
+    "\n",
+    "[5]rposhala/Recommender-System-on-MovieLens-dataset ... - GitHub. (n.d.). Retrieved October 22, 2022, from https://github.com/rposhala/Recommender-System-on-MovieLens-dataset.\n",
+    " "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
